few fixes with work break, made vote thing go further to the left on smaller screen

--- a/react-app/src/components/PostDetails/PostDetails.css
+++ b/react-app/src/components/PostDetails/PostDetails.css
@@ -79,7 +79,6 @@
 
 #post-details-title{
     word-wrap: break-word;
-    word-break: break-all;
 }
 
 #post-detail-user{
@@ -102,7 +101,6 @@
 #post-description-container{
     padding: 0px 30px;
     word-wrap: break-word;
-    word-break: break-all;
 }
 
 
@@ -204,5 +202,26 @@
         justify-content: center;
         width: 50%;
         margin: auto;
+    }
+}
+
+@media screen and (max-width: 700px){
+    #post-details-votes-container{
+        width: 60px;
+        top: 45%;
+        left: 3%;
+        height: auto;
+        box-sizing: content-box;
+    }
+
+    #post-details-votes{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border: 1px solid rgb(87, 87, 87);
+        border-radius: 5%;
+        padding: 20%;
+        gap: 10px;
     }
 }
